$Id: CHANGELOG.txt,v 1.31 2006/03/07 00:05:56 gregluck Exp $

<release version="1.1" date="2009-3-23" desc="Initial release of separate web module">

    <!-- Features and Enhancements -->
    <action dev="Greg Luck" type="add">
        Initial release of the standalone module.
    </action>
    <action dev="Greg Luck" type="add">
        Added a SimpleCachingHeadersCachingFilter, which sets browser caching filters. Thanks to Craig Andrews
        for contributing towards this.
    </action>
</release>
