@@ -10,7 +10,7 @@
     <name>Ehcache Web Filters</name>
     <artifactId>ehcache-web</artifactId>
     <packaging>jar</packaging>
-    <version>1.6.0</version>
+    <version>1.6.0-beta1</version>
     <description><![CDATA[Web caching filters.]]> </description>
     <dependencies>
         <dependency>
@@ -219,14 +219,6 @@
                     <enableRulesSummary>true</enableRulesSummary>
                 </configuration>
             </plugin>
-
-
-            <plugin>
-                <groupId>org.glassfish</groupId>
-                <artifactId>maven-glassfish-plugin</artifactId>
-                <version>1.0-alpha-4</version>
-            </plugin>
-
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
