@@ -10,5 +10,7 @@ $Id: CHANGELOG.txt,v 1.31 2006/03/07 00:05:56 gregluck Exp $
         Added a SimpleCachingHeadersCachingFilter, which sets browser caching filters. Thanks to Craig Andrews
         for contributing towards this.
     </action>
+    <action dev="Greg Luck" type="fix" issue="2630970">
+        Turned off caching of cookies.
 </release>
 
